--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
       - REPOSITORY_NAME=demo-repository
       - aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 482825264322.dkr.ecr.ap-northeast-2.amazonaws.com
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
+      - IMAGE_TAG=latest
   build:
     commands:
       - echo Building the Docker image...
