--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,12 +8,12 @@ phases:
       - REPOSITORY_NAME=demo-repository
       - aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 482825264322.dkr.ecr.ap-northeast-2.amazonaws.com
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=latest
+      - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
       - echo Building the Docker image...
       - docker build -t ${REPOSITORY_NAME} .
-      - docker tag ${REPOSITORY_NAME}:latest ${REPOSITORY_URI}/${REPOSITORY_NAME}:${IMAGE_TAG}
+      - docker tag demo-repository:latest 482825264322.dkr.ecr.ap-northeast-2.amazonaws.com/demo-repository:latest
   post_build:
     commands:
       - echo Pushing the Docker image...
