--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,11 +13,11 @@ phases:
     commands:
       - echo Building the Docker image...
       - docker build -t ${REPOSITORY_NAME} .
-      - docker tag demo-repository:latest 482825264322.dkr.ecr.ap-northeast-2.amazonaws.com/demo-repository:latest
+      - docker tag ${REPOSITORY_URI}:latest ${REPOSITORY_URI}:IMAGE_TAG
   post_build:
     commands:
       - echo Pushing the Docker image...
-      - docker push 482825264322.dkr.ecr.ap-northeast-2.amazonaws.com/demo-repository:latest
+      - docker push ${REPOSITORY_URI}:latest
       - echo Writing image definitions file...
       - printf '[{"name":"ContainerTest","imageUri":"%s"}]' ${REPOSITORY_URI}:latest > imagedefinitions.json
       - envsubst < taskdef.template > taskdef.json
@@ -25,5 +25,3 @@ phases:
 artifacts:
   files:
     - imagedefinitions.json
-    - appspec.yaml
-    - taskdef.json
