--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
       - echo Pushing the Docker image...
       - docker push ${REPOSITORY_URI}:latest
       - echo Writing image definitions file...
-      - printf '[{"name":"containertest","imageUri":"%s"}]' ${REPOSITORY_URI}:latest > imagedefinitions.json
+      - printf '[{"name":"serviceTaskContainerDefinition","imageUri":"%s"}]' ${REPOSITORY_URI}:latest > imagedefinitions.json
 artifacts:
   files:
     - imagedefinitions.json
